[gd_scene load_steps=13 format=2]

[ext_resource path="res://sprites/slider.png" type="Texture" id=1]
[ext_resource path="res://Options.gd" type="Script" id=2]
[ext_resource path="res://sprites/grabber.png" type="Texture" id=3]
[ext_resource path="res://interface/theme/font/large.tres" type="Theme" id=4]
[ext_resource path="res://interface/theme/font/dynamicfont.tres" type="Theme" id=5]
[ext_resource path="res://sprites/grabber_h.png" type="Texture" id=6]

[sub_resource type="StyleBoxTexture" id=1]
texture = ExtResource( 1 )
region_rect = Rect2( 0, 0, 320, 32 )
modulate_color = Color( 0.862745, 0.862745, 0.862745, 0.478431 )

[sub_resource type="StyleBoxTexture" id=2]

[sub_resource type="StyleBoxTexture" id=3]

[sub_resource type="StyleBoxFlat" id=4]

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0.239216, 0.239216, 0.239216, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
corner_radius_top_left = 2
corner_radius_top_right = 2
corner_radius_bottom_right = 2
corner_radius_bottom_left = 2

[sub_resource type="StyleBoxFlat" id=6]
bg_color = Color( 0.309804, 0.309804, 0.309804, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
corner_radius_top_left = 2
corner_radius_top_right = 2
corner_radius_bottom_right = 2
corner_radius_bottom_left = 2
shadow_color = Color( 0.4, 0.4, 0.4, 0.6 )
shadow_size = 2

[node name="Control" type="Control"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.764706 )

[node name="Label" type="Label" parent="ColorRect"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -320.0
margin_top = 100.0
margin_right = 320.0
margin_bottom = 32.0
theme = ExtResource( 4 )
text = "OPTIONS"
align = 1

[node name="VBoxContainer" type="NinePatchRect" parent="ColorRect"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -414.0
margin_top = -125.0
margin_right = 414.0
margin_bottom = 125.0
rect_min_size = Vector2( 500, 0 )
rect_pivot_offset = Vector2( -363, 105 )

[node name="HBoxContainer2" type="HBoxContainer" parent="ColorRect/VBoxContainer"]
margin_top = 50.0
margin_right = 828.0

[node name="Label2" type="Label" parent="ColorRect/VBoxContainer/HBoxContainer2"]
margin_top = 6.0
margin_right = 400.0
margin_bottom = 26.0
rect_min_size = Vector2( 400, 0 )
theme = ExtResource( 5 )
text = "Music Volume"
align = 1
autowrap = true
__meta__ = {
"_editor_description_": ""
}

[node name="mslider" type="HSlider" parent="ColorRect/VBoxContainer/HBoxContainer2"]
margin_left = 404.0
margin_right = 724.0
margin_bottom = 32.0
rect_min_size = Vector2( 200, 0 )
theme = ExtResource( 5 )
custom_icons/grabber_highlight = ExtResource( 6 )
custom_icons/grabber = ExtResource( 3 )
custom_styles/slider = SubResource( 1 )
custom_styles/grabber_area_highlight = SubResource( 2 )
custom_styles/grabber_area = SubResource( 3 )

[node name="musicv" type="Label" parent="ColorRect/VBoxContainer/HBoxContainer2"]
margin_left = 728.0
margin_top = 6.0
margin_right = 828.0
margin_bottom = 26.0
rect_min_size = Vector2( 100, 0 )
theme = ExtResource( 5 )
text = "100"
align = 1
autowrap = true
__meta__ = {
"_editor_description_": ""
}

[node name="HBoxContainer" type="HBoxContainer" parent="ColorRect/VBoxContainer"]
margin_top = 100.0
margin_right = 828.0

[node name="Label2" type="Label" parent="ColorRect/VBoxContainer/HBoxContainer"]
margin_top = 6.0
margin_right = 400.0
margin_bottom = 26.0
rect_min_size = Vector2( 400, 0 )
theme = ExtResource( 5 )
text = "Sfx Volume"
align = 1
autowrap = true
__meta__ = {
"_editor_description_": ""
}

[node name="sslider" type="HSlider" parent="ColorRect/VBoxContainer/HBoxContainer"]
margin_left = 404.0
margin_right = 724.0
margin_bottom = 32.0
rect_min_size = Vector2( 200, 0 )
theme = ExtResource( 5 )
custom_icons/grabber_highlight = ExtResource( 6 )
custom_icons/grabber = ExtResource( 3 )
custom_styles/slider = SubResource( 1 )
custom_styles/grabber_area_highlight = SubResource( 2 )
custom_styles/grabber_area = SubResource( 3 )

[node name="sfxv" type="Label" parent="ColorRect/VBoxContainer/HBoxContainer"]
margin_left = 728.0
margin_top = 6.0
margin_right = 828.0
margin_bottom = 26.0
rect_min_size = Vector2( 100, 0 )
theme = ExtResource( 5 )
text = "100"
align = 1
autowrap = true
__meta__ = {
"_editor_description_": ""
}

[node name="HBoxContainer4" type="HBoxContainer" parent="ColorRect/VBoxContainer"]
margin_top = 150.0
margin_right = 828.0
margin_bottom = 159.0

[node name="Label2" type="Label" parent="ColorRect/VBoxContainer/HBoxContainer4"]
margin_right = 400.0
margin_bottom = 20.0
rect_min_size = Vector2( 400, 0 )
theme = ExtResource( 5 )
text = "Use Vsync"
align = 1
autowrap = true
__meta__ = {
"_editor_description_": ""
}

[node name="CheckBox" type="CheckBox" parent="ColorRect/VBoxContainer/HBoxContainer4"]
margin_left = 404.0
margin_right = 424.0
margin_bottom = 20.0
custom_styles/hover = SubResource( 4 )
custom_styles/pressed = SubResource( 5 )
custom_styles/normal = SubResource( 6 )
align = 1
icon_align = 1
expand_icon = true

[node name="HBoxContainer3" type="HBoxContainer" parent="ColorRect/VBoxContainer"]
margin_top = 200.0
margin_right = 828.0
margin_bottom = 183.0

[node name="Label2" type="Label" parent="ColorRect/VBoxContainer/HBoxContainer3"]
margin_right = 400.0
margin_bottom = 20.0
rect_min_size = Vector2( 400, 0 )
theme = ExtResource( 5 )
text = "Fullscreen"
align = 1
autowrap = true
__meta__ = {
"_editor_description_": ""
}

[node name="fullscreen" type="CheckBox" parent="ColorRect/VBoxContainer/HBoxContainer3"]
margin_left = 404.0
margin_right = 424.0
margin_bottom = 20.0
custom_styles/hover = SubResource( 4 )
custom_styles/pressed = SubResource( 5 )
custom_styles/normal = SubResource( 6 )
align = 1
icon_align = 1
expand_icon = true

[node name="back" type="Button" parent="ColorRect"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -79.5
margin_top = -100.0
margin_right = 79.5
margin_bottom = -200.0
rect_pivot_offset = Vector2( -599, -281 )
focus_mode = 0
theme = ExtResource( 5 )
custom_colors/font_color_hover = Color( 0.709804, 0.529412, 0.529412, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
text = "Save"
flat = true

[connection signal="mouse_exited" from="ColorRect/VBoxContainer/HBoxContainer2/mslider" to="." method="_on_mslider_mouse_exited"]
[connection signal="value_changed" from="ColorRect/VBoxContainer/HBoxContainer2/mslider" to="." method="_on_mslider_value_changed"]
[connection signal="mouse_exited" from="ColorRect/VBoxContainer/HBoxContainer/sslider" to="." method="_on_sslider_mouse_exited"]
[connection signal="value_changed" from="ColorRect/VBoxContainer/HBoxContainer/sslider" to="." method="_on_sslider_value_changed"]
[connection signal="pressed" from="ColorRect/VBoxContainer/HBoxContainer4/CheckBox" to="." method="_on_CheckBox_pressed"]
[connection signal="pressed" from="ColorRect/VBoxContainer/HBoxContainer3/fullscreen" to="." method="_on_fullscreen_pressed"]
[connection signal="pressed" from="ColorRect/back" to="." method="_on_back_pressed"]
